:memo: docs: doc fmt
