# goserver/docs/swagger.json
@@ -18,8 +18,13 @@
     "host": "127.0.0.1:7888",
     "basePath": "/api",
     "paths": {
-        "/audioList": {
+        "/audioInfo": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "获取指定文件的音频信息，图片会被转为base64，大于10mb则不进行转换，避免传输数据包过大",
                 "consumes": [
                     "application/json"
@@ -31,6 +36,17 @@
                     "audio"
                 ],
                 "summary": "获取指定文件的音频信息",
+                "parameters": [
+                    {
+                        "description": "音频文件定位信息",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AudioListReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "操作成功",
@@ -44,6 +60,44 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/response.AudioInfo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/audioList": {
+            "post": {
+                "description": "获取当前目录的音频信息列表，封面图片如果有会转为base64",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "audio"
+                ],
+                "summary": "获取当前目录的音频信息列表",
+                "responses": {
+                    "200": {
+                        "description": "操作成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.AudioInfo"
+                                            }
                                         }
                                     }
                                 }
@@ -380,6 +434,40 @@
                 }
             }
         },
+        "/playAudio": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "audio"
+                ],
+                "summary": "播放音频，通过ffmpeg转换音频流",
+                "responses": {
+                    "200": {
+                        "description": "操作成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.AudioInfo"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/removeItem": {
             "post": {
                 "description": "传入路径，删除目录或文件",
@@ -520,6 +608,18 @@
         }
     },
     "definitions": {
+        "request.AudioListReq": {
+            "type": "object",
+            "required": [
+                "path"
+            ],
+            "properties": {
+                "path": {
+                    "description": "路径",
+                    "type": "string"
+                }
+            }
+        },
         "request.FilePath": {
             "type": "object",
             "properties": {
@@ -758,8 +858,10 @@
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "x-token",
+            "in": "header"
         }
     }
 }
